lib_LTLIBRARIES = libll++.la

libll___la_SOURCES = 		\
	module.cpp		\
	etc.cpp			\
	bitorder.cpp		\
	page.cpp		\
	pool.cpp		\
	printf.cpp		\
	obstack.cpp		\
	cache.cpp		\
	crc.cpp			\
	rbtree.cpp		\
	file_io.cpp		\
	reactor.cpp		\
	timer_manager.cpp	\
	module_end.cpp

CXXFLAGS = -std=c++11 -O2 -Wall -D__LIBLLPP__
