noinst_PROGRAMS = 	\
	member		\
	tuple_apply	\
	list		\
	page		\
	test_closure	\
	test_slotsig

member_SOURCES  =  member.cpp
tuple_apply_SOURCES = tuple_apply.cpp
list_SOURCES = list.cpp
page_SOURCES = page.cpp
test_closure_SOURCES = test_closure.cpp
test_slotsig_SOURCES = test_slotsig.cpp

LDFLAGS  = -L../libll++ -lll++ -Wall
CXXFLAGS = -I.. -std=c++11 -O2


