noinst_PROGRAMS = 		\
	test_member		\
	test_tuple_apply	\
	test_list		\
	test_page		\
	test_closure		\
	test_slotsig		\
	test_pool		\
	test_obstack

test_member_SOURCES  		= test_member.cpp
test_tuple_apply_SOURCES 	= test_tuple_apply.cpp
test_list_SOURCES 		= test_list.cpp
test_page_SOURCES 		= test_page.cpp
test_closure_SOURCES 		= test_closure.cpp
test_slotsig_SOURCES 		= test_slotsig.cpp
test_pool_SOURCES		= test_pool.cpp
test_obstack_SOURCES		= test_obstack.cpp

LDFLAGS  = -L../libll++ -lll++ 
CXXFLAGS = -I.. -std=c++11 -O2 -Wall


