noinst_PROGRAMS = 		\
	test_member		\
	test_tuple_apply	\
	test_list		\
	test_map		\
	test_page		\
	test_functor		\
	test_closure		\
	test_slotsig		\
	test_pool		\
	test_obstack		\
	test_reactor		\
	test_config

test_member_SOURCES  		= test_member.cpp
test_tuple_apply_SOURCES 	= test_tuple_apply.cpp
test_list_SOURCES 		= test_list.cpp
test_page_SOURCES 		= test_page.cpp
test_functor_SOURCES		= test_functor.cpp
test_closure_SOURCES 		= test_closure.cpp
test_slotsig_SOURCES 		= test_slotsig.cpp
test_pool_SOURCES		= test_pool.cpp
test_obstack_SOURCES		= test_obstack.cpp
test_hashmap_SOURCES		= test_hashmap.cpp
test_map_SOURCES		= test_map.cpp
test_reactor_SOURCES		= test_reactor.cpp
test_config_SOURCES		= test_config.cpp

LDFLAGS  = -L../libll++ -lll++ 
CXXFLAGS = -I.. -O2 -std=c++11 -Wall -g


